CHANGES INTRODUCED IN XINS 0.209:

* XINS/Java Server Framework:
  - Added a remoteIP() method in the request to retreive the IP address of the
    remote host that requested the function.
  - Fixed bug . The context identifier uses now the localhost hostname
    instead of the hostname of the remote host.
    This bug has been in XINS since version 0.203.

* XINS/Java Common Library:
  - Cleaned up and improved Logdoc.
  - Added unit test class for Int8, Int16, Int32 and Int64 types.
  - removed redundant code from all the Intxx type classes.
  - Added unit test class for Boolean type.
  - Removed redundant TypeValueException calls from Text class.
 
* XINS/Java Client Framework:
  - Fixed the Javadoc for the UnsuccessfulXINSCallException.

* Logdoc
  - The boolean type was not declared in the log_to_entry_html.xslt as a
    logdoc type.

* Generated build file
  - Fixed bug 1040507. If the authors.xml file does not exists the owner is
    not declared in the api.xml.
    This bug has been in XINS since version 0.207.

* Build and release process:
  - Added the possibility to release with a specific version
    (e.g. 1.0.0-Beta2).

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.208:

* XINS/Java Common Library:
  - Added the remove() method in ProtectedPropertyReader. The set() method
    does not remove the property anymore if the value is null.
  - Changed HTTPServiceCaller handling of input parameters. If a parameter
    value is null, then the parameter is now passed down, with the empty
    string as the value. Previously the parameter would not be sent down at
    all.
  - Added 'failOverAllowed' property to HTTPCallRequest. If this flag is set,
    then fail-over is always allowed.

* XINS/Java Client Framework:
  - Applied some refactorings and improved documentation.

* Logdoc
  - Removed unused log entries.

* Generated specification documentation: