@@ -11,7 +11,7 @@ import org.xins.common.types.TypeValueException;
 import org.xins.common.MandatoryArgumentChecker;
 import org.xins.common.collections.BasicPropertyReader;
 import org.xins.common.collections.PropertyReader;
-import org.xins.common.net.URLEncoding;
+import org.xins.common.text.URLEncoding;
 import org.xins.common.text.FastStringBuffer;
 
 /**
